add file2db
